--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "framer-motion": "^12.23.12",
     "netlify-identity-widget": "^1.9.2",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^7.8.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
